--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       context: ./
       dockerfile: Dockerfile
     environment:
-      - AWS_ACCESS_KEY_ID:$AWS_ACCESS_KEY_ID
-      - AWS_SECRET_ACCESS_KEY:$AWS_SECRET_ACCESS_KEY
+      - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+      - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
     ports:
-      - "443:443" 
+      - "5000:5000" 
