--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
 version: '3'
 services:
-  webhook:
+  app:
+    restart: always
     build:
       context: ./
       dockerfile: Dockerfile
+    volumes:
+      - $PWD/app/:/app/
     environment:
       - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
       - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+      - AWS_REGION=us-west-2
+      - AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN
     ports:
       - "5000:5000" 
