--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,18 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build, tag, and push image to GitHub Container Registry
+      run: |
+        docker build -t ghcr.io/${{ github.repository_owner }}/your-image-name:${{ github.sha }} .
+        docker push ghcr.io/${{ github.repository_owner }}/your-image-name:${{ github.sha }}
+
     - name: Deploy to AWS
       run: |
         ssh -o StrictHostKeyChecking=no -i "your-key.pem" ec2-user@your-ec2-instance-ip "docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG && docker-compose up -d"
