--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+    - name: Login to AWS
+      uses: aws-actions/aws-cli-login@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        role-to-assume: arn:aws:iam::684773845799:role/GitHubActionsRole
         aws-region: us-west-2
 
     - name: Login to Amazon ECR
@@ -45,7 +44,3 @@ jobs:
       run: |
         docker build -t ghcr.io/${{ github.repository_owner }}/your-image-name:${{ github.sha }} .
         docker push ghcr.io/${{ github.repository_owner }}/your-image-name:${{ github.sha }}
-
-    - name: Deploy to AWS
-      run: |
-        ssh -o StrictHostKeyChecking=no -i "your-key.pem" ec2-user@your-ec2-instance-ip "docker pull $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG && docker-compose up -d"
