--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - main
+permissions:
+  id-token: write   # This is required for requesting the JWT
+  contents: read    # This is required for actions/checkout
 
 jobs:
   deploy:
@@ -44,4 +47,3 @@ jobs:
       run: |
         docker build -t ghcr.io/${{ github.repository_owner }}/your-image-name:${{ github.sha }} .
         docker push ghcr.io/${{ github.repository_owner }}/your-image-name:${{ github.sha }}
-        
