testing install copilot

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Install AWS Copilot CLI
         run: |
+          cd /tmp
           curl -Lo copilot https://github.com/aws/copilot-cli/releases/latest/download/copilot-linux
           chmod +x copilot
           sudo mv copilot /usr/local/bin/copilot
