--- a/copilot/alpaca/manifest.yml
+++ b/copilot/alpaca/manifest.yml
@@ -3,8 +3,7 @@ type: Load Balanced Web Service
 
 http:
   path: '/'
-  # You can specify a custom health check path. The default is "/".
-  # healthcheck: '/'
+  healthcheck: '/'
 
 image:
   build: Dockerfile
