--- a/copilot/signalspit/manifest.yml
+++ b/copilot/signalspit/manifest.yml
@@ -1,4 +1,4 @@
-name: alpaca
+name: signalspit
 type: Load Balanced Web Service
 
 http:
@@ -7,13 +7,13 @@ http:
   interval: 1h
 
 image:
-  build: Dockerfile
+  build: ./svc/signalspit/Dockerfile
   port: 5000
 
 cpu: 256
 memory: 512
 count: 1
-exec: false
+exec: true
 network:
   connect: false
   
@@ -27,7 +27,3 @@ secrets:
     secretsmanager: 'gigakitty/alpaca/dev:APCA_API_SECRET_KEY::'
   TRADINGVIEW_SECRET:
     secretsmanager: 'gigakitty/alpaca/dev:TRADINGVIEW_SECRET::'
-  LIFX_TOKEN:
-    secretsmanager: 'gigakitty/alpaca/dev:LIFX_TOKEN::'
-  OPENAI_API_KEY:
-    secretsmanager: 'gigakitty/alpaca/dev:OPENAI_API_KEY::'
