--- a/copilot/signalspit/manifest.yml
+++ b/copilot/signalspit/manifest.yml
@@ -21,9 +21,6 @@ storage:
   readonly_fs: true
 
 secrets:
-  APCA_API_KEY_ID:
-    secretsmanager: 'gigakitty/alpaca/dev:APCA_API_KEY_ID::'
-  APCA_API_SECRET_KEY:
-    secretsmanager: 'gigakitty/alpaca/dev:APCA_API_SECRET_KEY::'
-  TRADINGVIEW_SECRET:
-    secretsmanager: 'gigakitty/alpaca/dev:TRADINGVIEW_SECRET::'
+  APCA_API_KEY_ID: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/APCA_API_KEY_ID
+  APCA_API_SECRET_KEY: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/APCA_API_SECRET_KEY
+  TRADINGVIEW_SECRET: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/TRADINGVIEW_SECRET
