--- a/svc/signalspit/requirements.txt
+++ b/svc/signalspit/requirements.txt
@@ -1,4 +1,5 @@
-alpaca-py==0.10.0
+alpaca-py==0.17.0
+annotated-types==0.6.0
 blinker==1.6.2
 boto3==1.28.44
 botocore==1.31.44
@@ -14,7 +15,8 @@ MarkupSafe==2.1.3
 msgpack==1.0.5
 numpy==1.25.2
 pandas==2.1.0
-pydantic==1.10.12
+pydantic==2.6.3
+pydantic_core==2.16.3
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==6.0.1
@@ -25,5 +27,5 @@ sseclient-py==1.8.0
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==1.26.16
-websockets==10.4
+websockets==11.0.3
 Werkzeug==2.3.7
