--- a/copilot/earnyearn/manifest.yml
+++ b/copilot/earnyearn/manifest.yml
@@ -1,43 +1,26 @@
-# The manifest for the "earningsyearner" service.
-# Read the full specification for the "Worker Service" type at:
-# https://aws.github.io/copilot-cli/docs/manifest/worker-service/
-
-# Your service name will be used in naming your resources like log groups, ECS services, etc.
 name: earnyearn
-type: Worker Service
+type: Backend Service
 
-# Configuration for your containers and service.
+http:
+  path: '/'
+  healthcheck: '/health'
+  interval: 1h
+
 image:
-  # Docker build arguments.
-  build: svc/earnyearn/Dockerfile
+  build: ./svc/earnyearn/Dockerfile
+  port: 5000
 
-cpu: 256       # Number of CPU units for the task.
-memory: 512    # Amount of memory in MiB used by the task.
-count: 1       # Number of tasks that should be running in your service.
-exec: true     # Enable running commands in your container.
+cpu: 256
+memory: 512
+count: 1
+exec: true
+network:
+  connect: false
 
 storage:
-  readonly_fs: true       # Limit to read-only access to mounted root filesystems.
+  readonly_fs: true
 
-
-# You can register to topics from other services.
-# The events can be received from an SQS queue via the env var $COPILOT_QUEUE_URI.
-# subscribe:
-#   topics: 
-#     - name: topic-from-another-service
-#       service: another-service
-
-# Optional fields for more advanced use-cases.
-#
-variables:                    # Pass environment variables as key value pairs.
-  LOG_LEVEL: debug
-
-#secrets:                      # Pass secrets from AWS Systems Manager (SSM) Parameter Store.
-#  GITHUB_TOKEN: GITHUB_TOKEN  # The key is the name of the environment variable, the value is the name of the SSM parameter.
-
-# You can override any of the values defined above by environment.
-#environments:
-#  test:
-#    count: 2               # Number of tasks to run for the "test" environment.
-#    deployment:            # The deployment strategy for the "test" environment.
-#       rolling: 'recreate' # Stops existing tasks before new ones are started for faster deployments.
+secrets:
+  APCA_API_KEY_ID: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/APCA_API_KEY_ID
+  APCA_API_SECRET_KEY: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/APCA_API_SECRET_KEY
+  FINNHUB_API_KEY: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/FINNHUB_API_KEY
