--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,21 +14,8 @@ services:
       - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
       - AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN
       - ENVIRONMENT=${ENVIRONMENT:-dev}
+      - TRADINGVIEW_SECRET=${TRADINGVIEW_SECRET:-asasdfaskdjfnm90890098kjlkjioweoik}
       - FINNHUB_API_KEY=${FINNHUB_API_KEY}
-  sentimentsheperd:
-    build:
-      context: ./svc/sentimentsheperd
-      dockerfile: ./Dockerfile
-    volumes:
-      - ./svc/sentimentsheperd/:/app/
-    environment:
-      - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
-      - AWS_REGION=${AWS_REGION:-us-east-1}
-      - APCA_API_KEY_ID=${APCA_API_KEY_ID}
-      - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
-      - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
-      - AWS_SESSION_TOKEN=$AWS_SESSION_TOKEN
-      - ENVIRONMENT=${ENVIRONMENT:-dev}
   signalspit:
     build:
       context: ./svc/signalspit
