--- a/copilot/earnyearn/manifest.yml
+++ b/copilot/earnyearn/manifest.yml
@@ -13,7 +13,7 @@ image:
 cpu: 256
 memory: 512
 count: 1
-exec: true
+exec: false
 network:
   connect: false
 
@@ -25,4 +25,3 @@ secrets:
   APCA_API_SECRET_KEY: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/APCA_API_SECRET_KEY
   FINNHUB_API_KEY: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/FINNHUB_API_KEY
   TRADINGVIEW_SECRET: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/TRADINGVIEW_SECRET
-
