--- a/copilot/signalspit/manifest.yml
+++ b/copilot/signalspit/manifest.yml
@@ -2,8 +2,8 @@ name: signalspit
 type: Load Balanced Web Service
 
 http:
-  path: '/'
-  healthcheck: '/health'
+  path: "/"
+  healthcheck: "/health"
   interval: 1h
 
 image:
@@ -13,10 +13,10 @@ image:
 cpu: 256
 memory: 512
 count: 1
-exec: true
+exec: false
 network:
   connect: false
-  
+
 storage:
   readonly_fs: true
 
@@ -24,3 +24,4 @@ secrets:
   APCA_API_KEY_ID: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/APCA_API_KEY_ID
   APCA_API_SECRET_KEY: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/APCA_API_SECRET_KEY
   TRADINGVIEW_SECRET: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/TRADINGVIEW_SECRET
+
