--- a/svc/earnyearn/Dockerfile
+++ b/svc/earnyearn/Dockerfile
@@ -14,6 +14,8 @@ WORKDIR /app
 
 COPY ./ /app/
 
+RUN pip install --upgrade pip
+
 RUN python -m pip install --trusted-host pypi.python.org -r requirements.txt
 
 CMD ["python", "main.py"]
