--- a/svc/earnyearn/requirements.txt
+++ b/svc/earnyearn/requirements.txt
@@ -1,6 +1,7 @@
 datetime2==0.9.4
 finnhub-python==2.4.19
-websockets==10.4
+alpaca-py==0.17.0
+websockets==11.0.3
 apscheduler==3.10.4
 pandas==2.2.1
 pandas-ta==0.3.14b
