Refactor trailing function in calc.py to accept data parameter

--- a/copilot/earnyearn/manifest.yml
+++ b/copilot/earnyearn/manifest.yml
@@ -19,5 +19,6 @@ storage:
 secrets:
   APCA_API_KEY_ID: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/APCA_API_KEY_ID
   APCA_API_SECRET_KEY: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/APCA_API_SECRET_KEY
+  EARNYEARN_ORDER_ENDPOINT: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/EARNYEARN_ORDER_ENDPOINT
   FINNHUB_API_KEY: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/FINNHUB_API_KEY
   TRADINGVIEW_SECRET: /copilot/${COPILOT_APPLICATION_NAME}/${COPILOT_ENVIRONMENT_NAME}/secrets/TRADINGVIEW_SECRET
