--- a/svc/sentimentsheperd/Dockerfile
+++ b/svc/sentimentsheperd/Dockerfile
@@ -1,24 +1,15 @@
 # For more information, please refer to https://aka.ms/vscode-docker-python
 FROM python:3.11.5-slim-bullseye
 
-ENV TZ=America/New_York
-
+# Keeps Python from generating .pyc files in the container
 ENV PYTHONDONTWRITEBYTECODE=1
 
 # Turns off buffering for easier container logging
 ENV PYTHONUNBUFFERED=1
 
-# So we don't get version warnings
-ENV PIP_DISABLE_PIP_VERSION_CHECK=1
-
-
 WORKDIR /app
 
 COPY ./ /app/
-
-RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
-RUN pip install --upgrade pip
 
 RUN python -m pip install --trusted-host pypi.python.org -r requirements.txt
 
