--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,3 +47,19 @@ services:
       - AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
       - ENVIRONMENT=${ENVIRONMENT:-dev}
       - OPENAI_API_KEY=${OPENAI_API_KEY:-asdf}
+  purrstream:
+    build:
+      context: ./svc/purrstream
+      dockerfile: ./Dockerfile
+    ports:
+      - 8765:8765
+    volumes:
+      - ./svc/purrstream/:/app/
+    environment:
+      - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+      - AWS_REGION=${AWS_REGION:-us-east-1}
+      - APCA_API_KEY_ID=${APCA_API_KEY_ID}
+      - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
+      - ENVIRONMENT=${ENVIRONMENT:-dev}
