--- a/svc/pacapredictor/Dockerfile
+++ b/svc/pacapredictor/Dockerfile
@@ -7,11 +7,13 @@ ENV PYTHONDONTWRITEBYTECODE=1
 # Turns off buffering for easier container logging
 ENV PYTHONUNBUFFERED=1
 
-EXPOSE 8765 8000
+EXPOSE 5000
 
 WORKDIR /app
 
 COPY ./ /app/
+
+RUN pip install --upgrade pip
 
 RUN python -m pip install --trusted-host pypi.python.org -r requirements.txt
 
