--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,6 @@ $RECYCLE.BIN/
 */build/*
 *~
 .AppleDB
-data
 .AppleDesktop
 .AppleDouble
 .DocumentRevisions-V100
@@ -89,6 +88,7 @@ Network Trash Folder
 Temporary Items
 Thumbs.db
 __pycache__/
+_data
 atlassian-ide-plugin.xml
 build/
 celerybeat-schedule.*
@@ -97,6 +97,7 @@ com_crashlytics_export_strings.xml
 coverage.xml
 crashlytics-build.properties
 crashlytics.properties
+data
 develop-eggs/
 dist/
 docs/_build/
