--- a/svc/scalpaca/requirements.txt
+++ b/svc/scalpaca/requirements.txt
@@ -1,12 +1,2 @@
-#TA-Lib==0.4.28
-aiohttp==3.9.5
-alpaca-py==0.17.0
-alpaca==1.0.0
-apscheduler==3.10.4
-finnhub-python==2.4.19
-pandas-ta==0.3.14b
-pandas==2.2.1
-redis==5.0.4
-aioredis==2.0.1
-websockets==11.0.3
-pymarketstore==0.22
+alpaca-trade-api==3.2.0
+textual==0.63.6
