--- a/_config/prometheus.yml
+++ b/_config/prometheus.yml
@@ -1,7 +1,30 @@
 global:
   scrape_interval: 15s
-
+  scrape_timeout: 10s
+  scrape_protocols:
+    - OpenMetricsText1.0.0
+    - OpenMetricsText0.0.1
+    - PrometheusText0.0.4
+  evaluation_interval: 1m
 scrape_configs:
-  - job_name: "prometheus"
+  - job_name: prometheus
+    honor_timestamps: true
+    track_timestamps_staleness: false
+    scrape_interval: 15s
+    scrape_timeout: 10s
+    scrape_protocols:
+      - OpenMetricsText1.0.0
+      - OpenMetricsText0.0.1
+      - PrometheusText0.0.4
+    metrics_path: /metrics
+    scheme: http
+    enable_compression: true
+    follow_redirects: true
+    enable_http2: true
     static_configs:
-      - targets: ["prometheus:9090"]
+      - targets:
+          - prometheus:9090
+  - job_name: "cloudflared"
+    static_configs:
+      - targets: ["127.0.0.1:60123"]
+    metrics_path: /metrics
