--- a/_config/prometheus.yml
+++ b/_config/prometheus.yml
@@ -26,5 +26,8 @@ scrape_configs:
           - prometheus:9090
   - job_name: "cloudflared"
     static_configs:
-      - targets: ["127.0.0.1:60123"]
-    metrics_path: /metrics
+      - targets: ["cloudflared:60123"]
+    metrics_path: /metricsscrape_configs
+  - job_name: "slanger"
+    static_configs:
+      - targets: ["https://dev.haxor.space"]
