--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -125,6 +125,8 @@ services:
       - ${SLANGER_PORT:-5000}:5000
     volumes:
       - ./svc/slanger/:/app/
+    depends_on:
+      - cloudflared
     environment:
       - APCA_API_KEY_ID=${APCA_API_KEY_ID}
       - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
@@ -168,36 +170,38 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
     depends_on:
       - redis-stack
-      #- prometheus
+      - prometheus
     volumes:
       - grafana_data:/var/lib/grafana
 
-  #  prometheus:
-  #    image: prom/prometheus:latest
-  #    container_name: prometheus-${ENVIRONMENT:-dev}
-  #    restart: unless-stopped
-  #    volumes:
-  #      - ./_config/prometheus.yml:/etc/prometheus/prometheus.yml
-  #    command:
-  #      - "--config.file=/etc/prometheus/prometheus.yml"
-  #    ports:
-  #      - ${PROMETHEUS_PORT:-9090}:9090
-  #    networks:
-  #      - monitoring
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus-${ENVIRONMENT:-dev}
+    restart: unless-stopped
+    volumes:
+      - ./_config/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    ports:
+      - ${PROMETHEUS_PORT:-9090}:9090
+    networks:
+      - monitoring
 
-  #  cloudflared:
-  #    image: cloudflare/cloudflared:latest
-  #    container_name: cloudflared
-  #    restart: unless-stopped
-  #    # command: >
-  #    #   "tunnel --no-autoupdate run --config /etc/cloudflared/config.yml"
-  #    environment:
-  #      - CLOUDFLARED_TUNNEL_ID=${CLOUDFLARED_TUNNEL_ID}
-  #      - CLOUDFLARED_HOSTNAME=${CLOUDFLARED_HOSTNAME}
-  #      - CLOUDFLARED_SERVICE=${CLOUDFLARED_SERVICE}
-  #    # volumes:
-  #    #   - ~/.cloudflared:/etc/.cloudflared
-  #    #   - ./_config/cloudflared.yml:/jkk/config.yml
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    container_name: cloudflared-${ENVIRONMENT:-dev}
+    restart: always
+    command: >
+      tunnel --config /etc/cloudflared/config.yml --no-autoupdate run --token ${CLOUDFLARED_TUNNEL_TOKEN}
+    network_mode: host
+    environment:
+      - CLOUDFLARED_HOSTNAME=${CLOUDFLARED_HOSTNAME}
+      - CLOUDFLARED_SERVICE=${CLOUDFLARED_SERVICE}
+      - CLOUDFLARED_TUNNEL_ID=${CLOUDFLARED_TUNNEL_ID}
+      - CLOUDFLARED_TUNNEL_TOKEN=${CLOUDFLARED_TUNNEL_TOKEN}
+      - TUNNEL_ORIGIN_CERT=/etc/cloudflared/cert.pem
+    volumes:
+      - /home/captain/.cloudflared:/etc/cloudflared
 
 networks:
   monitoring:
