--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,28 +37,28 @@ services:
       - REDIS_PORT=${REDIS_PORT}
       - TRADINGVIEW_SECRET=${TRADINGVIEW_SECRET}
 
-  pacapredictor:
-    build:
-      args:
-        SVC_DIR: ./svc/pacapredictor
-    container_name: parapredictor-${ENVIRONMENT:-dev}
-    restart: always
-    runtime: nvidia
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
-    volumes:
-      - ./svc/pacapredictor/:/app/
-    environment:
-      - NVIDIA_VISIBLE_DEVICES=all
-      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
-      - APCA_API_KEY_ID=${APCA_API_KEY_ID}
-      - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
-      - ENVIRONMENT:-dev=${ENVIRONMENT}
+  # pacapredictor:
+  #   build:
+  #     args:
+  #       SVC_DIR: ./svc/pacapredictor
+  #   container_name: parapredictor-${ENVIRONMENT:-dev}
+  #   restart: always
+  #   runtime: nvidia
+  #   deploy:
+  #     resources:
+  #       reservations:
+  #         devices:
+  #           - driver: nvidia
+  #             count: all
+  #             capabilities: [gpu]
+  #   volumes:
+  #     - ./svc/pacapredictor/:/app/
+  #   environment:
+  #     - NVIDIA_VISIBLE_DEVICES=all
+  #     - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+  #     - APCA_API_KEY_ID=${APCA_API_KEY_ID}
+  #     - APCA_API_SECRET_KEY=${APCA_API_SECRET_KEY}
+  #     - ENVIRONMENT:-dev=${ENVIRONMENT}
 
   purrstream:
     build:
@@ -149,11 +149,13 @@ services:
     image: redis/redis-stack:latest
     container_name: redis-stack-${ENVIRONMENT:-dev}
     restart: always
+    #command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
     ports:
       - ${REDIS_PORT:-6379}:6379
       - ${REDIS_PORT_TWO:-8001}:8001
     volumes:
       - redis_data:/data
+      #  - ./_config/redis.conf:/usr/local/etc/redis/redis.conf
     networks:
       - redis_network
 
@@ -170,22 +172,22 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
     depends_on:
       - redis-stack
-      - prometheus
+      #- prometheus
     volumes:
       - grafana_data:/var/lib/grafana
 
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus-${ENVIRONMENT:-dev}
-    restart: unless-stopped
-    volumes:
-      - ./_config/prometheus.yml:/etc/prometheus/prometheus.yml
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-    ports:
-      - ${PROMETHEUS_PORT:-9090}:9090
-    networks:
-      - monitoring
+  #prometheus:
+  #  image: prom/prometheus:latest
+  #  container_name: prometheus-${ENVIRONMENT:-dev}
+  #  restart: unless-stopped
+  #  volumes:
+  #    - ./_config/prometheus.yml:/etc/prometheus/prometheus.yml
+  #  command:
+  #    - "--config.file=/etc/prometheus/prometheus.yml"
+  #  ports:
+  #    - ${PROMETHEUS_PORT:-9090}:9090
+  #  networks:
+  #    - monitoring
 
   cloudflared:
     image: cloudflare/cloudflared:latest
@@ -193,15 +195,23 @@ services:
     restart: always
     command: >
       tunnel --config /etc/cloudflared/config.yml --no-autoupdate run --token ${CLOUDFLARED_TUNNEL_TOKEN}
+    #entrypoint: ["/bin/sh", "-c", "envsubst < /etc/cloudflared/config.yml.template > /etc/cloudflared/config.yml && cloudflared tunnel --config /etc/cloudflared/config.yml run"]
     network_mode: host
     environment:
       - CLOUDFLARED_HOSTNAME=${CLOUDFLARED_HOSTNAME}
       - CLOUDFLARED_SERVICE=${CLOUDFLARED_SERVICE}
       - CLOUDFLARED_TUNNEL_ID=${CLOUDFLARED_TUNNEL_ID}
       - CLOUDFLARED_TUNNEL_TOKEN=${CLOUDFLARED_TUNNEL_TOKEN}
+      - CREDENTIALS_FILE=/etc/cloudflared/tunnelid.json
+      - DEV_HOSTNAME=dev.haxor.space
+      - DEV_SERVICE=http://localhost:8080
+      - MAIN_HOSTNAME=main.haxor.space
+      - MAIN_SERVICE=http://localhost:8081
+      - TUNNEL_ID=your-tunnel-id
       - TUNNEL_ORIGIN_CERT=/etc/cloudflared/cert.pem
     volumes:
       - /home/captain/.cloudflared:/etc/cloudflared
+      #- ./cloudflared:/etc/cloudflared
 
 networks:
   monitoring:
