--- a/_config/redis.conf
+++ b/_config/redis.conf
@@ -1,6 +1,13 @@
 client-output-buffer-limit normal 0 0 0
 client-output-buffer-limit replica 256mb 64mb 60
 client-output-buffer-limit pubsub 64mb 16mb 60
+max_connections 25
+# Maximum memory usage (e.g., 1GB)
+maxmemory 1gb
+
+# TCP backlog
+tcp-backlog 511
+maxmeory-policy allkeys-lru
 
 port 6379
 daemonize no
